그라데이션 추가

--- a/style.css
+++ b/style.css
@@ -157,3 +157,4 @@
 .ee {clear: both;}
 .ff {max-width: 200px; width: 80%;}
 .rr {display: block; margin: 20px auto;}
+.ooo {background: linear-gradient( to right, black 68%, red);}
