--- a/CSS/style.css
+++ b/CSS/style.css
@@ -161,6 +161,12 @@
     width: 18rem;
     margin:10px;
 }
+.rcard
+{
+    max-width: 100%;
+    margin: 10px;
+    height:100%;
+}
 .ll {display: block; text-align: center; padding-top: 15px; margin: 20px auto; width: 80%; max-width: 450px; }
 .aa {margin-top: 50px;}
 .bb {margin-bottom: 50px;}
